[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/ui/fonts/lato_regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/ui/fonts/notosansjp_bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/ui/fonts/lato_bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://code/ui/common/texts/title.tscn" type="PackedScene" id=4]
[ext_resource path="res://code/ui/pages/details/scripts/tag.gd" type="Script" id=5]
[ext_resource path="res://code/ui/common/buttons/check.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 14
use_filter = true
font_data = ExtResource( 3 )
fallback/0 = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 14
use_filter = true
extra_spacing_top = -4
extra_spacing_bottom = -4
font_data = ExtResource( 1 )

[node name="Tag" type="VBoxContainer"]
anchor_right = 1.0
margin_bottom = 109.0
custom_constants/separation = 16
script = ExtResource( 5 )

[node name="Title" parent="." instance=ExtResource( 4 )]
anchor_right = 0.0
margin_right = 512.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "Nintendo Network ID"

[node name="Options" type="HBoxContainer" parent="."]
margin_top = 33.0
margin_right = 512.0
margin_bottom = 61.0
custom_constants/separation = 8

[node name="FC" type="HBoxContainer" parent="Options"]
visible = false
margin_right = 480.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_constants/separation = 4

[node name="Prefix" type="Label" parent="Options/FC"]
visible = false
margin_top = 5.0
margin_right = 25.0
margin_bottom = 19.0
text = "SW-"

[node name="A" type="LineEdit" parent="Options/FC"]
margin_right = 151.0
margin_bottom = 24.0
size_flags_horizontal = 3
align = 1
max_length = 4
placeholder_text = "----"
caret_blink = true
caret_blink_speed = 0.5

[node name="Separator1" type="Label" parent="Options/FC"]
margin_left = 155.0
margin_top = 7.0
margin_right = 160.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
text = "-"

[node name="B" type="LineEdit" parent="Options/FC"]
margin_left = 164.0
margin_right = 315.0
margin_bottom = 24.0
size_flags_horizontal = 3
align = 1
max_length = 4
placeholder_text = "----"
caret_blink = true
caret_blink_speed = 0.5

[node name="Separator2" type="Label" parent="Options/FC"]
margin_left = 319.0
margin_top = 7.0
margin_right = 324.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
text = "-"

[node name="C" type="LineEdit" parent="Options/FC"]
margin_left = 328.0
margin_right = 480.0
margin_bottom = 24.0
size_flags_horizontal = 3
align = 1
max_length = 4
placeholder_text = "----"
caret_blink = true
caret_blink_speed = 0.5

[node name="NNID" type="LineEdit" parent="Options"]
margin_right = 476.0
margin_bottom = 28.0
size_flags_horizontal = 3
max_length = 16

[node name="Toggle" parent="Options" instance=ExtResource( 8 )]
margin_left = 484.0
margin_right = 512.0
margin_bottom = 28.0
hint_tooltip = "Visibility"

[node name="Separator" type="HSeparator" parent="."]
margin_top = 77.0
margin_right = 512.0
margin_bottom = 109.0
custom_constants/separation = 32

[connection signal="text_changed" from="Options/FC/A" to="." method="_on_FC_A_changed"]
[connection signal="text_changed" from="Options/FC/B" to="." method="_on_FC_B_changed"]
[connection signal="text_changed" from="Options/FC/C" to="." method="_on_FC_C_changed"]
[connection signal="text_changed" from="Options/NNID" to="." method="_on_NNID_text_changed"]
[connection signal="toggled" from="Options/Toggle" to="." method="_on_Toggle_toggled"]
